Added Table and added a Style.

--- a/opera.html
+++ b/opera.html
@@ -95,6 +95,33 @@
           I love, I love you madly!</p>
         <h4 class="CHORUS">CHORUS.</h4>           <p class="speech">You very, very plain old man,
           She loves, she loves you madly!</p>
+
+          
+    <table class="table">
+
+      <tr>
+          <th>Character</th>
+          <th>Singer</th>
+          <th>Offer</th>
+      </tr>
+      <tr>
+          <td>ALEX</td>
+          <td>AtifAslam</td>
+          <td>15M dollars</td>
+      </tr>
+      <tr> 
+          <td>ALINE</td>
+          <td>Hariharan</td>
+          <td>20M dollars</td>
+      </tr>
+
+      <tr> 
+        <td>WELLS</td>
+        <td>SonuNigam</td>
+        <td>12M dollars</td>
+    </tr>
+   
+  </table>
       
 
 </body>
