Added Images to Opera.html

--- a/opera.html
+++ b/opera.html
@@ -124,7 +124,7 @@
    
   </table>
       <br>
-  <a href=opera2.html> Click to goto - opera2.html</a>
+  <a href=opera2.html>  opera2.html</a>
 
 
 
@@ -137,6 +137,19 @@
     <li> <a href="opera.html">Opera-Zone</a> </li>
     <li> <a href="opera2.html">And the show goes on</a> </li>
     </ul>
+
+    <img src="sonu-nigam-759.jpg"
+    height="200" width="100"
+     alt= "Sonu" >
+
+     <img src="hariharan-1-16300736534x3.jpg"
+     height="200" width="100"
+      alt= "Hariharan" >
+
+      <img src="unnamed.jpg"
+      height="200" width="100"
+       alt= "Atif Aslam" >
+
 
 </body>
 </html>
