--- a/opera.html
+++ b/opera.html
@@ -124,7 +124,7 @@
    
   </table>
       <br>
-  <a href=opera2.html>  opera2.html</a>
+  <a href=opera2.html>  opera2.html - And the Show goes on</a>
 
 
 
@@ -147,7 +147,7 @@
       alt= "Hariharan" >
 
       <img src="unnamed.jpg"
-      height="200" width="100"
+      height="200" width="50"
        alt= "Atif Aslam" >
 
 
